[package]
name = "wasm-terminal"
description = "Emulates a terminal on the web."
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"

[profile.release]
lto = true
